argocd/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd
  namespace: argocd
spec:
  parentRefs:
    - name: internal
      namespace: gateway
      sectionName: https
  hostnames:
    - "argocd.hiibolt.com"
  rules:
    - backendRefs:
        - name: argocd-server
          port: 80
